# RAM-Eating-Pet-Simulator

./: .gitignore  Cargo.toml  README.md  config.toml
assets/: ascii_art.txt
src/: config.rs  game.rs  lib.rs  main.rs
src/graphics/: animations.rs  colors.rs  mod.rs  renderer.rs
src/pet/: metabolism.rs  mod.rs  personality.rs  state.rs
src/system/: memory.rs  mod.rs  monitor.rs
